Adjusted build script

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 compile_pdf:
   image: aergus/latex
   script:
-    - latexmk -pdf src/manual.tex
+    - cd src/ && latexmk -pdf manual.tex
   artifacts:
     paths:
       - friending-manual.pdf
