--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,8 @@
 compile_pdf:
-  image: jrbeverly/latex:mediumplus
+  image: jrbeverly/latex:common
   stage: build
+  only: 
+    - master
   script:
     - cd src/ && latexmk -pdf manual.tex
   artifacts:
@@ -12,4 +14,4 @@ trigger_build:
   only: 
     - master
   script:
-    - "curl -X POST -F token=${ARTIFACT_TOKEN} -F ref=master https://gitlab.com/api/v3/projects/${PROJECT_ID}/trigger/builds"
+    - "curl -X POST -F token=${ARTIFACT_TOKEN} -F ref=master ${GITLAB_URL}/api/v3/projects/${PROJECT_ID}/trigger/builds"
