--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 ## Editors
 .vscode/.browse.VC.db
 
-## Core latex/pdflatex auxiliary files:
+## Core latex/pdflatex auxiliary files
 *.aux
 *.lof
 *.log
@@ -14,7 +14,7 @@
 *.cb
 *.cb2
 
-## Intermediate documents:
+## Intermediate documents
 *.dvi
 *-converted-to.*
 # these rules might exclude image files for figures etc.
@@ -22,10 +22,10 @@
 # *.eps
 # *.pdf
 
-## Generated if empty string is given at "Please type another file name for output:"
+## Generated if empty string is given at "Please type another file name for output"
 .pdf
 
-## Bibliography auxiliary files (bibtex/biblatex/biber):
+## Bibliography auxiliary files (bibtex/biblatex/biber)
 *.bbl
 *.bcf
 *.blg
@@ -34,7 +34,7 @@
 *.brf
 *.run.xml
 
-## Build tool auxiliary files:
+## Build tool auxiliary files
 *.fdb_latexmk
 *.synctex
 *.synctex(busy)
@@ -42,7 +42,7 @@
 *.synctex.gz(busy)
 *.pdfsync
 
-## Auxiliary and intermediate files from other packages:
+## Auxiliary and intermediate files from other packages
 # algorithms
 *.alg
 *.loa
@@ -193,7 +193,7 @@ pythontex-files-*/
 # Latexian
 TSWLatexianTemp*
 
-## Editors:
+## Editors
 # WinEdt
 *.bak
 *.sav
@@ -216,5 +216,5 @@ TSWLatexianTemp*
 output/
 doc/images/
 
-# Documentation:
+# Documentation
 docs/**/images/
